deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konzek-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: konzek.local
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 6000
          - path: /product-catalog(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: product-catalog-service
                port:
                  number: 7000
          - path: /product-categories(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: product-categories-service
                port:
                  number: 5000
